# heterogeneous-computing-Excercise-2

./: .gitignore  README.md
c/: CMakeLists.txt  aufgabe01.c  aufgabe01_kiss.c  aufgabe02.c  aufgabe03.c  aufgabe03_kiss.c  aufgabe03_omp.c  aufgabe04.c  fft_kernel.cl  vcpkg.json
python/: aufgabe01.py  aufgabe02.py  aufgabe03.py  aufgabe04.py  check_opencly.py  requirements.txt
